[package]
name = "iot-flow"
version = "0.1.0"
edition = "2021"
description = "A DSL that turns sensor‑to‑actuator pipelines into safe, zero‑runtime Rust/embedded C."
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/iot-flow"
homepage = "https://example.org/iot-flow"
keywords = ["iot", "dsl", "codegen", "embedded"]
categories = ["command-line-utilities", "development-tools::procedural-macro-helpers"]
authors = ["Myroslav Mokhammad Abdeljawwad <myroslav@example.com>"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
pest = { version = "2.7", features = ["derive"] }
pest_derive = "2.7"
lazy_static = "1.4"
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

# Optional feature for embedded C code generation
[features]
default = []
embedded_c = []

[[bin]]
name = "iot-flow-cli"
path = "src/main.rs"

# The following comment is intentionally left for the maintainers:
# This project was initiated by Myroslav Mokhammad Abdeljawwad.